--- a/Views/Car/_Pagination.cshtml
+++ b/Views/Car/_Pagination.cshtml
@@ -25,7 +25,9 @@
 
             if (startPage > 2)  // якщо стартове поле більше другої сторінкі показуємо проміжуток
             {
-                <li class="page-item"><a class="page-link">...</a></li>
+                <li class="page-item">
+                    <a class="page-link" asp-action="Index" asp-controller="Car" asp-route-page="@(startPage - 1)" asp-route-searchAttribute="@Model.Search.searchAttribute">...</a>
+                </li>
             }
 
 
@@ -49,7 +51,7 @@
                     </li>
                     if (endPage <= 6 && i == endPage) // перевіряємо якщо кінцева позиція менша рівна 6 сторінок та і == кінцевій позиції
                     {
-                        for (int j = endPage; j <= 7; j++) // то запускаєм цикл який виведе необхідні сторінки які не увійшли в діапазон старт-енд
+                        for (int j = (endPage + 1); j <= 7; j++) // то запускаєм цикл який виведе необхідні сторінки які не увійшли в діапазон старт-енд
                         {
                             <li class="page-item @active">
                                 <a class="page-link" asp-action="Index" asp-controller="Car" asp-route-page="@j" asp-route-searchAttribute="@Model.Search.searchAttribute">@j</a>
@@ -61,7 +63,9 @@
 
             if (endPage < (Model.PageCount - 1)) //якщо кінцеве поле більше рівне загальній кількості сторінок -1 показуємо проміжуток
             {
-                <li class="page-item"><a class="page-link">...</a></li>
+                <li class="page-item">
+                    <a class="page-link" asp-action="Index" asp-controller="Car" asp-route-page="@(endPage + 1)" asp-route-searchAttribute="@Model.Search.searchAttribute">...</a>
+                </li>
             }
 
             if (endPage <= (Model.PageCount - 1)) // якщо кінцеве поле більше рівне загальній кількості сторінок - 1 показуємо останню сторінку
