--- a/Views/Car/EditAvto.cshtml
+++ b/Views/Car/EditAvto.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditAvto">
+        <form  enctype="multipart/form-data" asp-action="EditAvto">
             <h5>Введіть ID авто яке хочете змінити</h5>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
@@ -33,6 +33,12 @@
                 <label asp-for="YearNew" class="control-label"></label>
                 <input asp-for="YearNew" class="form-control" />
                 <span asp-validation-for="YearNew" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Photo" class="control-label"></label>
+                <input asp-for="Photo" type="file" class="form-control" />
+                <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save Change" class="btn btn-primary" />
