--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,9 +32,27 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">List Auto</a>
                         </li>
-                        <li class="nav-item" style="margin-left: auto">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Account</a>
+                        @*<li class="nav-item" style="margin-left: auto">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Account</a>
+                        </li>*@
+                    </ul>
+                    <ul class="navbar-nav">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
+                        }
                     </ul>
                 </div>
             </div>
