--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,9 +38,12 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">List User</a>
                             </li>
                         }
-                        @*<li class="nav-item" style="margin-left: auto">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Account</a>
-        </li>*@
+                        @if (User.IsInRole("User"))
+                        {
+                            <li class="nav-item" style="margin-left: auto">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Account</a>
+                            </li>
+                        }
                     </ul>
                     <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
