--- a/Views/User/Edit.cshtml
+++ b/Views/User/Edit.cshtml
@@ -31,7 +31,7 @@
 }
 
 
-<form asp-action="Edit" asp-controller="User">
+<form asp-action="Edit" asp-controller="User" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
@@ -57,6 +57,12 @@
             <option value="User">User</option>
         </select>
         <span asp-validation-for="RoleSelect" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Photo" class="control-label"></label>
+        <input asp-for="Photo" type="file" class="form-control" />
+        <span asp-validation-for="Photo" class="text-danger"></span>
     </div>
 
     <div class="form-group">
