--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -1,15 +1,19 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Список пользователей";
 }
 
 <a asp-action="Create">Добавить пользователя</a>
 
 <table class="table">
-    <tr><th>Email</th><th>Name</th><th></th></tr>
+    <tr><th>Photo</th><th>Email</th><th>Name</th><th></th></tr>
     @foreach (var user in Model)
     {
         string[] nameUser = user.Email.Split(new char[] { '@' });
         <tr>
+            <td>
+                <img src="/photo/@user.PathImages" alt="No Image" height="100" />
+            </td>
             <td>@user.Email</td>
             <td>@nameUser[0]</td>
             <td>
